[gd_scene load_steps=9 format=2]

[ext_resource path="res://rooms/RoomSkeleton.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/LampHanging.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/sprites/monster_blob.png" type="Texture" id=3]
[ext_resource path="res://scenes/SpotLight.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/Blob.gd" type="Script" id=5]
[ext_resource path="res://scenes/Door.tscn" type="PackedScene" id=6]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.2

[sub_resource type="RectangleShape2D" id=2]

[node name="TileMap" instance=ExtResource( 1 )]
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 4, 0, 0, 5, 0, 0, 65540, 0, 0, 65541, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 262144, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 327680, 0, 0, 327683, 0, 0, 327684, 0, 0 )
opening_left = PoolIntArray( 1, 2, 3 )
opening_top = PoolIntArray( 2, 3 )
opening_right = PoolIntArray( 2, 3, 5 )
opening_bottom = PoolIntArray( 1, 2, 5 )
spawn_pos = Vector2( 2, 1 )
door_pos = Vector2( 1, 4 )

[node name="Blob" type="RigidBody2D" parent="." index="0" groups=[
"Monsters",
]]
position = Vector2( 209.36, 252.515 )
collision_layer = 3
collision_mask = 3
mode = 2
physics_material_override = SubResource( 1 )
can_sleep = false
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="Blob" index="0"]
position = Vector2( 0, -26.2429 )
texture = ExtResource( 3 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Blob" index="1"]
position = Vector2( 0, -26.2429 )
polygon = PoolVector2Array( -27.9536, 26.673, -19.4126, 30.1497, 23.0612, 29.9435, 28.0313, 26.673, 25.6986, 5.67863, 11.7024, -5.98489, -9.87515, -8.3176, -24.4546, 5.67863 )

[node name="SpotLight" parent="Blob" index="2" instance=ExtResource( 4 )]
position = Vector2( 12, -18 )

[node name="Sensor" type="Area2D" parent="Blob" index="3"]
position = Vector2( 46.6541, 4.08223 )
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Blob/Sensor" index="0"]
shape = SubResource( 2 )

[node name="SensorHigh" type="Area2D" parent="Blob" index="4"]
position = Vector2( 46.6541, -23.327 )
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Blob/SensorHigh" index="0"]
shape = SubResource( 2 )

[node name="SensorFeet" type="Area2D" parent="Blob" index="5"]
position = Vector2( 13.879, 16.3825 )
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Blob/SensorFeet" index="0"]
shape = SubResource( 2 )

[node name="LampHanging" parent="." index="1" instance=ExtResource( 2 )]

[node name="Door" parent="." index="2" instance=ExtResource( 6 )]
